--- a/MVCSample/appsettings.Development.json
+++ b/MVCSample/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "connection":"/api/V4zHEAf8Q8jmcJ5x
 }
