--- a/MVCSample/appsettings.Development.json
+++ b/MVCSample/appsettings.Development.json
@@ -5,5 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "connection":"/api/V4zHEAf8Q8jmcJ5x
+  "connection":"/api/V4zHEAf8Q8jmcJ5x"
 }
